--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,3 @@
 aluno.nome=Nome
 NotBlank.aluno.nome=Nome não pode estar vazio.
-NumberFormatException.aluno.rg=Apenas numeros.
+typeMismatch.java.lang.Long={0} deve ser numerico.
