Aluno e Aeronave refatorados e layout ok.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,8 @@
 aluno.nome=Nome
 NotBlank.aluno.nome=Nome não pode estar vazio.
-typeMismatch.java.lang.Long={0} deve ser numerico.
+NotBlank.aluno.rg=RG não pode estar vazio.
+
+
+# Converte msg para validações numericas
+#typeMismatch.java.lang.Long={0} deve ser numerico.    <- forma especifica
+typeMismatch={0} deve ser numerico.
