Incluido DataTables, todos os layouts revisados, todos os cruds ok. Eliminado todos os JS nao mais usados.
Bug: Excluir objetos com relacoes ManyToMany
Bug: jquery.dataTables.min.js esta mal configurado e tive que duplicar a
pasta com as imagens, talvez alterar o CSS seja mais negocio?

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,6 +2,8 @@ aluno.nome=Nome
 NotBlank.aluno.nome=Nome não pode estar vazio.
 NotBlank.aluno.rg=RG não pode estar vazio.
 
+# forma generica, talvez tenha que deixar alguns especificos já que o {0} é o nome da variavel
+NotBlank={0} não pode estar vazio.
 
 # Converte msg para validações numericas
 #typeMismatch.java.lang.Long={0} deve ser numerico.    <- forma especifica
