Halibatnado os labels  de I18Ne exclusao paginas nao usadas

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,6 +2,44 @@ aluno.nome=Nome
 NotBlank.aluno.nome=Nome não pode estar vazio.
 NotBlank.aluno.rg=RG não pode estar vazio.
 
+atendente.nome=Nome
+atendente.rg=RG
+atendente.cpf=CPF
+atendente.alistamantoMilitar=Alistamento Militar
+atendente.escolaridade=Escolaridade
+atendente.tituloEleitor=Título de Eleitor
+
+aeronave.certificadoMatricula=
+aeronave.marca=Marca
+aeronave.modelo=Modelo
+aeronave.dentel=DENTEL
+aeronave.fiam=FIAM
+aeronave.apoliceSeguro=Apólice de Seguro
+aeronave.fichaPesoBalanceamento=Possui Ficha de Balanceamento?
+aeronave.manualVoo=Possui Manual de Vôo?
+aeronave.checkList=checkList
+aeronave.nsca3_5=Possui NSCA 3-5?
+aeronave.nsca3_7=Possui NSCA 3-7?
+aeronave.diarioBordo=Possui Diário de Bordo?
+aeronave.ativo=Aeronave Ativa?
+aeronave.motivoInatividade=Motivo da inatividade
+
+agenda.dataReserva=
+agenda.aluno=
+agenda.aeronave=
+agenda.horario=
+agenda.qtdeHoras=
+agenda.aula=
+agenda.instrutor=
+
+aula.materia=
+aula.quantidadeHorasNecessarias=
+aula.aeronaves=
+
+instrutor.nome-
+
+socio.nome=
+
 # forma generica, talvez tenha que deixar alguns especificos já que o {0} é o nome da variavel
 NotBlank={0} não pode estar vazio.
 
