Troca do mecanismo de insert para Ajax. Validacoes de erro tambre em Ajax. Fazor nao quebrar o funcionamento do common-utils.js =)
TODO melhorar layout das mensagens de erro ao deletar itens com constrain.
     talvez marcar as Aulas com Cascade.All???

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,15 +1,16 @@
 aluno.nome=Nome
-NotBlank.aluno.nome=Nome não pode estar vazio.
-NotBlank.aluno.rg=RG não pode estar vazio.
+aluno.rg=RG
+aluno.CPF=CPF
+#NotBlank.aluno.nome=Nome não pode estar vazio.
 
 atendente.nome=Nome
 atendente.rg=RG
 atendente.cpf=CPF
-atendente.alistamantoMilitar=Alistamento Militar
+atendente.alistamentoMilitar=Alistamento Militar
 atendente.escolaridade=Escolaridade
 atendente.tituloEleitor=Título de Eleitor
 
-aeronave.certificadoMatricula=
+aeronave.certificadoMatricula=Certificado de Matricula
 aeronave.marca=Marca
 aeronave.modelo=Modelo
 aeronave.dentel=DENTEL
@@ -25,23 +26,28 @@ aeronave.ativo=Aeronave Ativa?
 aeronave.motivoInatividade=Motivo da inatividade
 
 agenda.dataReserva=
-agenda.aluno=
-agenda.aeronave=
+agenda.aluno=Aluno
+agenda.aeronave=Aeronave
 agenda.horario=
 agenda.qtdeHoras=
 agenda.aula=
 agenda.instrutor=
 
-aula.materia=
+aula.materia=Materia
 aula.quantidadeHorasNecessarias=
-aula.aeronaves=
+aula.aeronaves=Aeronaves
 
-instrutor.nome-
+instrutor.nome=Nome
+instrutor.rg=RG
+instrutor.cpf=CPF
 
-socio.nome=
+socio.nome=Nome
+socio.rg=RG
+socio.cpf=CPF
 
 # forma generica, talvez tenha que deixar alguns especificos já que o {0} é o nome da variavel
 NotBlank={0} não pode estar vazio.
+NotNull={0} não pode estar vazio.
 
 # Converte msg para validações numericas
 #typeMismatch.java.lang.Long={0} deve ser numerico.    <- forma especifica
