--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,41 +1,51 @@
 aluno.nome=Nome
 aluno.rg=RG
 aluno.CPF=CPF
-#NotBlank.aluno.nome=Nome n„o pode estar vazio.
+aluno.alistamentoMilitar=Alistamento Militar
+aluno.Escolaridade=Escolaridade
+aluno.tituloEleitor=Titulo de Eleitor
+aluno.codigoANAC=Codigo ANAC
+aluno.nomePista=Nome de Pista
+aluno.CHT=CHT
+aluno.CMA=CMA
+aluno.ativo=Ativo
+#NotBlank.aluno.nome=Nome n√£o pode estar vazio.
 
 atendente.nome=Nome
 atendente.rg=RG
 atendente.cpf=CPF
 atendente.alistamentoMilitar=Alistamento Militar
 atendente.escolaridade=Escolaridade
-atendente.tituloEleitor=TÌtulo de Eleitor
+atendente.tituloEleitor=Titulo de Eleitor
 
 aeronave.certificadoMatricula=Certificado de Matricula
 aeronave.marca=Marca
 aeronave.modelo=Modelo
 aeronave.dentel=DENTEL
 aeronave.fiam=FIAM
-aeronave.apoliceSeguro=ApÛlice de Seguro
+aeronave.apoliceSeguro=Apolice de Seguro
 aeronave.fichaPesoBalanceamento=Possui Ficha de Balanceamento?
-aeronave.manualVoo=Possui Manual de VÙo?
+aeronave.manualVoo=Possui Manual de Voo?
 aeronave.checkList=checkList
 aeronave.nsca3_5=Possui NSCA 3-5?
 aeronave.nsca3_7=Possui NSCA 3-7?
-aeronave.diarioBordo=Possui Di·rio de Bordo?
+aeronave.diarioBordo=Possui Diario de Bordo?
 aeronave.ativo=Aeronave Ativa?
 aeronave.motivoInatividade=Motivo da inatividade
 
-agenda.dataReserva=
+agenda.dataReserva=Data da Reserva
 agenda.aluno=Aluno
 agenda.aeronave=Aeronave
-agenda.horario=
-agenda.qtdeHoras=
-agenda.aula=
-agenda.instrutor=
+agenda.horario= Hor√°rios Disponiveis
+agenda.qtdeHoras=Quantidade de Horas
+agenda.aula=Aula
+agenda.instrutor=Instrutor
+agenda.360Milhas=360 Milhas
 
-aula.materia=Materia
-aula.quantidadeHorasNecessarias=
-aula.aeronaves=Aeronaves
+NotBlank.agenda.dataReserva=Data da Reserva nao pode estar vazio.
+NotBlank.agenda.aeronave=Aeronave nao pode estar vazio.
+NotBlank.agenda.horario=Horario nao pode estar vazio.
+NotBlank.agenda.qtdeHoras=Quantidade de Horas nao pode estar vazio.
 
 instrutor.nome=Nome
 instrutor.rg=RG
@@ -45,10 +55,14 @@ socio.nome=Nome
 socio.rg=RG
 socio.cpf=CPF
 
-# forma generica, talvez tenha que deixar alguns especificos j· que o {0} È o nome da variavel
-NotBlank={0} n„o pode estar vazio.
-NotNull={0} n„o pode estar vazio.
+aula.materia=Materia
+aula.quantidadeHorasNecessarias=Quantidade de Horas Necessarias
+aula.aeronaves=Aeronaves
 
-# Converte msg para validaÁıes numericas
+# forma generica, talvez tenha que deixar alguns especificos j√° que o {0} √© o nome da vari√°vel
+NotBlank={0} nao pode estar vazio.
+NotNull={0} nao pode estar vazio.
+
+# Converte msg para valida√ß√µes numericas
 #typeMismatch.java.lang.Long={0} deve ser numerico.    <- forma especifica
 typeMismatch={0} deve ser numerico.
