i18n da message de cpf

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -63,7 +63,9 @@ aula.aeronaves=Aircrafts
 # forma generica, talvez tenha que deixar alguns especificos já que o {0} é o nome da variável
 NotBlank={0} cannot be empty.
 NotNull={0} cannot be empty.
+CPF={0} invalid.
 
 # Converte msg para validacoes numericas
 #typeMismatch.java.lang.Long={0} deve ser numerico.    <- forma especifica
 typeMismatch={0} must be numeric.
+ 
