--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
 title=Aeroclube de São Paulo - Bem Vindo
 
+aluno.titulo=Aluno
 aluno.nome=Nome
 aluno.rg=RG
 aluno.cpf=CPF
@@ -12,6 +13,7 @@ aluno.CHT=CHT
 aluno.CMA=CMA
 aluno.ativo=Ativo
 
+atendente.titulo=Atendente
 atendente.nome=Nome
 atendente.rg=RG
 atendente.cpf=CPF
@@ -19,6 +21,7 @@ atendente.alistamentoMilitar=Alistamento Militar
 atendente.escolaridade=Escolaridade
 atendente.tituloEleitor=Titulo de Eleitor
 
+aeronave.titulo=Aeronave
 aeronave.certificadoMatricula=Certificado de Matricula
 aeronave.marca=Marca
 aeronave.modelo=Modelo
@@ -34,6 +37,7 @@ aeronave.diarioBordo=Possui Diario de Bordo?
 aeronave.ativo=Aeronave Ativa?
 aeronave.motivoInatividade=Motivo da inatividade
 
+agenda.titulo=Agenda
 agenda.dataReserva=Data da Reserva
 agenda.aluno=Aluno
 agenda.aeronave=Aeronave
@@ -43,22 +47,41 @@ agenda.aula=Aula
 agenda.instrutor=Instrutor
 agenda.360Milhas=360 Milhas
 
-#NotBlank.agenda.dataReserva=Data da Reserva nao pode estar vazio.
-#NotBlank.agenda.aeronave=Aeronave nao pode estar vazio.
-#NotBlank.agenda.horario=Horario nao pode estar vazio.
-#NotBlank.agenda.qtdeHoras=Quantidade de Horas nao pode estar vazio.
-
+instrutor.titulo=Instrutor
 instrutor.nome=Nome
 instrutor.rg=RG
 instrutor.cpf=CPF
+instrutor.Escolaridade=Escolaridade
+instrutor.tituloEleitor=Titulo de Eleitor
+instrutor.codigoANAC=Codigo ANAC
+instrutor.nomePista=Nome de Pista
+instrutor.CHT=CHT
+instrutor.CMA=CMA
+instrutor.quantidadeHorasMinistrada=Quantidade de Horas Ministradas
+instrutor.ativo=Ativo
 
+socio.titulo=Socio
+socio.numeroInscricao=Número de Inscrição
 socio.nome=Nome
 socio.rg=RG
 socio.cpf=CPF
+socio.alistamentoMilitar=Alistamento Militar
+socio.escolaridade=Escolaridade
+socio.tituloEleitor=Título de Eleitor
+socio.codigoANAC=Codigo ANAC
+socio.nomePista=Nome de Pista
+socio.CHT=CHT
+socio.CMA=CMA
+socio.ativo=Ativo
 
+aula.titulo=Aula
 aula.materia=Materia
 aula.quantidadeHorasNecessarias=Quantidade de Horas Necessarias
 aula.aeronaves=Aeronaves
+
+formulario.botaoFechar=Fechar
+formulario.botaoLimpar=Limpar
+formulario.botaoSalvar=Salvar
 
 # forma generica, talvez tenha que deixar alguns especificos jÃ¡ que o {0} Ã© o nome da variÃ¡vel
 NotBlank={0} nao pode estar vazio.
