--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,39 +1,43 @@
 title=Flight Club of Sao Paulo - Welcome
 
+aluno.titulo=Student
 aluno.nome=Name
 aluno.rg=RG
 aluno.cpf=CPF
-aluno.alistamentoMilitar=Alistamento Militar
-aluno.Escolaridade=Escolaridade
-aluno.tituloEleitor=Titulo de Eleitor
-aluno.codigoANAC=Codigo ANAC
-aluno.nomePista=Nome de Pista
+aluno.alistamentoMilitar=Military Draft
+aluno.Escolaridade=Education
+aluno.tituloEleitor=Title Voter
+aluno.codigoANAC=Code ANAC
+aluno.nomePista=Name of Track
 aluno.CHT=CHT
 aluno.CMA=CMA
 aluno.ativo=Active
 
+atendente.titulo=Attendant
 atendente.nome=Name
 atendente.rg=RG
 atendente.cpf=CPF
-atendente.alistamentoMilitar=Alistamento Militar
-atendente.escolaridade=Escolaridade
-atendente.tituloEleitor=Titulo de Eleitor
+atendente.alistamentoMilitar=Military Draft
+atendente.escolaridade=Education
+atendente.tituloEleitor=Title Voter
 
-aeronave.certificadoMatricula=Certificado de Matricula
+aeronave.titulo=Aircraft
+aeronave.certificadoMatricula=Certificate of Enrollment
 aeronave.marca=Manufacturer
 aeronave.modelo=Model
 aeronave.dentel=DENTEL
 aeronave.fiam=FIAM
 aeronave.apoliceSeguro=Insurance Policy
-aeronave.fichaPesoBalanceamento=Possui Ficha de Balanceamento?
+aeronave.fichaPesoBalanceamento=Balance Sheet has?
 aeronave.manualVoo=Has flying manual?
 aeronave.checkList=checkList
 aeronave.nsca3_5=Has NSCA 3-5?
 aeronave.nsca3_7=Has NSCA 3-7?
 aeronave.diarioBordo=Has logbook?
-aeronave.ativo=Aeronave Ativa?
+aeronave.ativo=Active Aircraft?
 aeronave.motivoInatividade=Reason of inactivity
 
+agenda.titulo=Daybook
 agenda.dataReserva=Reservation date
 agenda.aluno=Pupil
 agenda.aeronave=Aircraft
@@ -43,22 +47,42 @@ agenda.aula=Lesson
 agenda.instrutor=Instructor
 agenda.360Milhas=360 Miles
 
-#NotBlank.agenda.dataReserva=Data da Reserva nao pode estar vazio.
-#NotBlank.agenda.aeronave=Aeronave nao pode estar vazio.
-#NotBlank.agenda.horario=Horario nao pode estar vazio.
-#NotBlank.agenda.qtdeHoras=Quantidade de Horas nao pode estar vazio.
-
+instrutor.titulo=Instructor
 instrutor.nome=Name
 instrutor.rg=RG
 instrutor.cpf=CPF
+instrutor.alistamentoMilitar=Military Draft
+instrutor.escolaridade=Education
+instrutor.tituloEleitor=Title Voter
+instrutor.codigoANAC=Code ANAC
+instrutor.nomePista=Name of Track
+instrutor.CHT=CHT
+instrutor.CMA=CMA
+instrutor.quantidadeHorasMinistrada=Number of Hours Taught
+instrutor.ativo=Active
 
+socio.titulo=Member
+socio.numeroInscricao=Registration Number
 socio.nome=Name
 socio.rg=RG
 socio.cpf=CPF
+socio.alistamentoMilitar=Military Draft
+socio.escolaridade=Education
+socio.tituloEleitor=Title Voter
+socio.codigoANAC=Code ANAC
+socio.nomePista=Name of Track
+socio.CHT=CHT
+socio.CMA=CMA
+socio.ativo=Active
 
+aula.titulo=Lesson
 aula.materia=Theme
 aula.quantidadeHorasNecessarias=Required hours
 aula.aeronaves=Aircrafts
+
+formulario.botaoFechar=Close
+formulario.botaoLimpar=Clean
+formulario.botaoSalvar=Save
 
 # forma generica, talvez tenha que deixar alguns especificos já que o {0} é o nome da variável
 NotBlank={0} cannot be empty.
