Ajustes mensagens de inclusao e alteracao

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -20,6 +20,7 @@ atendente.cpf=CPF
 atendente.alistamentoMilitar=Alistamento Militar
 atendente.escolaridade=Escolaridade
 atendente.tituloEleitor=Titulo de Eleitor
+atendente.ativo=Ativo
 
 aeronave.titulo=Aeronave
 aeronave.certificadoMatricula=Certificado de Matricula
