--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -20,6 +20,7 @@ atendente.cpf=CPF
 atendente.alistamentoMilitar=Military Draft
 atendente.escolaridade=Education
 atendente.tituloEleitor=Title Voter
+atendente.ativo=Active
 
 aeronave.titulo=Aircraft
 aeronave.certificadoMatricula=Certificate of Enrollment
@@ -38,7 +39,7 @@ aeronave.ativo=Active Aircraft?
 aeronave.motivoInatividade=Reason of inactivity
 
 agenda.titulo=Daybook
-agenda.dataReserva=Reservation date
+agenda.dataReserva=Reservation Date
 agenda.aluno=Pupil
 agenda.aeronave=Aircraft
 agenda.horario= Available times
