Ajustes nos eventos do calendario, ainda falta muita coisa... =P

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -52,7 +52,8 @@ instrutor.titulo=Instrutor
 instrutor.nome=Nome
 instrutor.rg=RG
 instrutor.cpf=CPF
-instrutor.Escolaridade=Escolaridade
+instrutor.alistamentoMilitar=Alistamento Militar
+instrutor.escolaridade=Escolaridade
 instrutor.tituloEleitor=Titulo de Eleitor
 instrutor.codigoANAC=Codigo ANAC
 instrutor.nomePista=Nome de Pista
