Lista horario disponivel por aeronave. Lista apenas aeronaves habilitadas para o aluno.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,6 +12,7 @@ aluno.nomePista=Nome de Pista
 aluno.CHT=CHT
 aluno.CMA=CMA
 aluno.ativo=Ativo
+aluno.aeronaves=Aeronaves Habilitadas
 
 atendente.titulo=Atendente
 atendente.nome=Nome
@@ -85,10 +86,10 @@ formulario.botaoFechar=Fechar
 formulario.botaoLimpar=Limpar
 formulario.botaoSalvar=Salvar
 
-# forma generica, talvez tenha que deixar alguns especificos j√° que o {0} √© o nome da vari√°vel
+# forma generica, talvez tenha que deixar alguns especificos j· que o {0} È o nome da vari·vel
 NotBlank={0} nao pode estar vazio.
 NotNull={0} nao pode estar vazio.
 
-# Converte msg para valida√ß√µes numericas
+# Converte msg para validaÁıes numericas
 #typeMismatch.java.lang.Long={0} deve ser numerico.    <- forma especifica
 typeMismatch={0} deve ser numerico.
