--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -12,6 +12,7 @@ aluno.nomePista=Name of Track
 aluno.CHT=CHT
 aluno.CMA=CMA
 aluno.ativo=Active
+aluno.aeronaves=Enabled Aircraft
 
 atendente.titulo=Attendant
 atendente.nome=Name
