Cadastro das Aeronaves dos instrutores
Aeronaves no qual os instrutores são homologados.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -62,6 +62,7 @@ instrutor.CHT=CHT
 instrutor.CMA=CMA
 instrutor.quantidadeHorasMinistrada=Quantidade de Horas Ministradas
 instrutor.ativo=Ativo
+instrutor.aeronaves=Aeronaves Habilitadas
 
 socio.titulo=Socio
 socio.numeroInscricao=Número de Inscrição
