--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -62,6 +62,7 @@ instrutor.CHT=CHT
 instrutor.CMA=CMA
 instrutor.quantidadeHorasMinistrada=Number of Hours Taught
 instrutor.ativo=Active
+instrutor.aeronaves=Enabled Aircraft
 
 socio.titulo=Member
 socio.numeroInscricao=Registration Number
