adicionado modal do agendamento - not working

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
-title=Aeroclube de São Paulo - Bem Vindo
+title=Aeroclube de Sï¿½o Paulo - Bem Vindo
 
 aluno.titulo=Aluno
 aluno.nome=Nome
@@ -43,7 +43,7 @@ agenda.titulo=Agenda
 agenda.dataReserva=Data da Reserva
 agenda.aluno=Aluno
 agenda.aeronave=Aeronave
-agenda.horario= Horários Disponiveis
+agenda.horario= Horï¿½rios Disponiveis
 agenda.qtdeHoras=Quantidade de Horas
 agenda.aula=Aula
 agenda.instrutor=Instrutor
@@ -65,13 +65,13 @@ instrutor.ativo=Ativo
 instrutor.aeronaves=Aeronaves Habilitadas
 
 socio.titulo=Socio
-socio.numeroInscricao=Número de Inscrição
+socio.numeroInscricao=Nï¿½mero de Inscriï¿½ï¿½o
 socio.nome=Nome
 socio.rg=RG
 socio.cpf=CPF
 socio.alistamentoMilitar=Alistamento Militar
 socio.escolaridade=Escolaridade
-socio.tituloEleitor=Título de Eleitor
+socio.tituloEleitor=Tï¿½tulo de Eleitor
 socio.codigoANAC=Codigo ANAC
 socio.nomePista=Nome de Pista
 socio.CHT=CHT
@@ -87,10 +87,13 @@ formulario.botaoFechar=Fechar
 formulario.botaoLimpar=Limpar
 formulario.botaoSalvar=Salvar
 
-# forma generica, talvez tenha que deixar alguns especificos já que o {0} é o nome da variável
+# forma generica, talvez tenha que deixar alguns especificos jï¿½ que o {0} ï¿½ o nome da variï¿½vel
 NotBlank={0} nao pode estar vazio.
 NotNull={0} nao pode estar vazio.
 
-# Converte msg para validações numericas
+# Converte msg para validaï¿½ï¿½es numericas
 #typeMismatch.java.lang.Long={0} deve ser numerico.    <- forma especifica
 typeMismatch={0} deve ser numerico.
+CPF={0} inv\u00E1lido
+
+agendamento.titulo=Novo Agendamento
