--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -95,4 +95,5 @@ CPF={0} invalid.
 # Converte msg para validacoes numericas
 #typeMismatch.java.lang.Long={0} deve ser numerico.    <- forma especifica
 typeMismatch={0} must be numeric.
+agendamento.titulo=Schedule
  
