Preço das horas de voo por aeronave

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -25,6 +25,7 @@ atendente.ativo=Ativo
 
 aeronave.titulo=Aeronave
 aeronave.certificadoMatricula=Certificado de Matricula
+aeronave.valorHora=Valor da Hora de Vôo
 aeronave.marca=Marca
 aeronave.modelo=Modelo
 aeronave.dentel=DENTEL
