--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -25,6 +25,7 @@ atendente.ativo=Active
 
 aeronave.titulo=Aircraft
 aeronave.certificadoMatricula=Certificate of Enrollment
+aeronave.valorHora=Price of Time Flight
 aeronave.marca=Manufacturer
 aeronave.modelo=Model
 aeronave.dentel=DENTEL
